# creative-ideas-agent-workflow

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
data/schema/: README.md  idea.example.json  idea.schema.json  idea.template.json
docs/: from-brief-to-plan.md
docs/archive/: Claude.md  Planering.md
docs/decisions/: 0001-stresstest-av-projektplanen.md  0002-mattstockens-auktoritet.md  0003-nedskalad-fas-0.md  0004-feedback-loopen.md  README.md
docs/phases/: phase-0-yardstick.md
experiments/: README.md
prompts/: README.md
scripts/: README.md
src/radon/: __init__.py
